--- a/src/css/components/box.scss
+++ b/src/css/components/box.scss
@@ -1,21 +1,23 @@
 .infoBox{
-    width: 300px;
-    height: 100px;
-    margin: 25px auto;
+    width: 25%;
+    height: 200px;
+    margin: 10% auto;
     background: #323e47;
     border: 0.5px solid white;
     &__title{
         font-size: 20px;
-        padding: 10px 30px;
+        padding: 10px 30px 0px;
         text-align: left;
     }
     &__star{
         font-size: 20px;
-        padding: 10px 30px;
-        text-align: center;
+        padding: 5px 20px 5px 30px;
+        text-align: left;
+        color: gold;
     }
     &__points{
-        padding: 10px 30px;
+        padding: 5px 20px 5px 15px;
         text-align: left;
+        color: white;
     }
 }
