--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,5 +1,6 @@
 @import "./components/navbar.scss";
 @import "./components/box.scss";
+@import "./components/informationBox.scss";
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
 *{
