--- a/src/css/components/footer.scss
+++ b/src/css/components/footer.scss
@@ -1,6 +1,6 @@
 .am{
     &__footer{
-        width: 100vw;
+        width: 100%;
         height: 8vh;
         position: absolute;
         bottom: 0;
@@ -9,7 +9,7 @@
         text-align: center;
         &--content{
             display: block;
-            margin-top: 2.5vh;
+            padding-top: 2.5vh;
         }
     }
 }
