--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,6 +1,7 @@
 @import "./components/navbar.scss";
 @import "./components/box.scss";
 @import "./components/informationBox.scss";
+@import "./fonts.scss";
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
 *{
@@ -11,17 +12,19 @@
 }
 
 html, body{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Canter;
     color: white;
     font-size: 16px;
-    font-weight: 500;
-    background: #253239;
-    height: 100vh;
+    font-weight: 300;
+    background: white;
+    height: auto;
+    width: 100%;
+    letter-spacing: 3px;
 }
 
 a,
 a:hover,
 a:visited{
     text-decoration: none;
-    color: white;
+    color: purple;
 }
