--- a/src/css/components/box.scss
+++ b/src/css/components/box.scss
@@ -1,23 +1,45 @@
+.image{
+    width: 30%;
+    height: auto;
+    margin: 5% auto;
+    &__responsive{
+        width: 100%;
+        height: auto;
+        border-radius: 50%;
+    }
+}
+
+.informations{
+    width: 100%;
+    margin: 0% auto;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    bottom: 0vh;
+    left: 0;
+}
+
 .infoBox{
-    width: 25%;
+    width: 33.33%;
     height: 200px;
-    margin: 10% auto;
-    background: #323e47;
-    border: 0.5px solid white;
+    background: #fff;
+    border: 0.5px solid gold;
+    color: purple;
     &__title{
-        font-size: 20px;
-        padding: 10px 30px 0px;
-        text-align: left;
+        font-size: 26px;
+        padding: 80px 30px 0px;
+        text-align: center;
     }
     &__star{
-        font-size: 20px;
-        padding: 5px 20px 5px 30px;
-        text-align: left;
+        font-size: 26px;
+        padding: 80px 20px 0px 30px;
+        text-align: center;
         color: gold;
     }
     &__points{
-        padding: 5px 20px 5px 15px;
-        text-align: left;
-        color: white;
+        font-size: 26px;
+        padding: 80px 20px 5px 15px;
+        text-align: center;
+        color: purple;
     }
 }
